<?xml version="1.0" encoding="utf-8"?>

<resources>
	
	<!-- App wide strings-->
    <string name="app_name">Spice Rack</string>

    <!-- SearchView strings -->
    <string name="search_label">Recipes</string>
	<string name="search_instructions">Search by recipe, ingredient or category</string>
    <string name="search_hint">Search for recipe</string>
    
    <!-- Results Activity strings -->
    <string name="search_results_title">Search results</string>
    <string name="browse_all_title">Browse all recipes</string>
    <string name="no_results_text">No results matched your query</string>
    
    
    <!-- Recipe Activity strings -->
    <string name="title_recipe_name_placeholder">Recipe Name Placeholder</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_instructions">Instructions</string>

<!--     Temporary: Toasts that appear when buttons pressed -->
<!--    	<string name="browse_favorites">Browse your favorite recipes</string> -->
<!--     <string name="browse_all">Browse all recipes</string> -->
<!--     <string name="browse_category">Browse recipes by category</string> -->
<!--     <string name="browse_ingredient">Browse recipes by ingredient</string> -->
    
    <!-- Action Bar Text -->
    <string name="action_browse_favorites">Browse your favorite recipes</string>
    <string name="action_browse_all">Browse all recipes</string>
    <string name="action_spices">Building a spice collection</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    
</resources>