<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<!--     <LinearLayout -->
<!-- 	    android:layout_width="wrap_content" -->
<!-- 	    android:layout_height="wrap_content" -->
<!-- 	    android:orientation="horizontal" > -->
    	<TextView
		    android:id="@+id/recipe_name"
		    android:textColor="?android:textColorPrimary"
		    android:textSize="24sp"
		    android:text="@string/title_recipe_name_placeholder"
		    android:background="@android:drawable/title_bar"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:drawableRight="@drawable/ic_action_star" />
<!-- 	    <ImageView -->
<!-- 	        android:id="@+id/favorite_icon" -->
<!-- 	        android:icon="@drawable/ic_action_star" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	    	android:layout_height="wrap_content" -->
<!-- 	         /> -->
<!--     </LinearLayout> -->
	<TextView
        android:id="@+id/description_text"
        android:textColor="?android:textColorPrimary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
	<TextView
        android:id="@+id/ingredients"
        android:textColor="?android:textColorPrimary"
        android:textSize="17sp"
        android:text="@string/title_ingredients"
        android:background="@android:drawable/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
	<LinearLayout
        android:id="@+id/ingredients_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
	<TextView
        android:id="@+id/instructions"
        android:textColor="?android:textColorPrimary"
        android:textSize="17sp"
        android:text="@string/title_instructions"
        android:background="@android:drawable/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
	<LinearLayout
        android:id="@+id/instructions_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
</LinearLayout>
